# amirs-birthday-skipper

./: Cargo.toml  README.md
site_data/: index.html  index.js  style.css
src/: lib.rs  main.rs  player.rs  state.rs  utils.rs  websocket.rs
