[package]
name = "amirs-birthday-skipper"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
chrono = "0.4.45"
futures = "0.3.32"
rand = "0.10.1"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["fs"] }
