[package]
name = "amirs-birthday-skipper"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
chrono = { version = "0.4.45", features = ["serde"] }
futures = "0.3.32"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.7.0", features = ["fs"] }
